--- a/Programma_GOR_5F/Librerie/raspberry-sharp-io-master/Raspberry.IO.Components/Raspberry.IO.Components.csproj
+++ b/Programma_GOR_5F/Librerie/raspberry-sharp-io-master/Raspberry.IO.Components/Raspberry.IO.Components.csproj
@@ -34,13 +34,13 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Common.Logging">
-      <HintPath>..\packages\Common.Logging.2.2.0\lib\net40\Common.Logging.dll</HintPath>
+      <HintPath>..\..\..\packages\Common.Logging.2.2.0\lib\net35\Common.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging.Core">
-      <HintPath>..\packages\Common.Logging.Core.2.2.0\lib\net40\Common.Logging.Core.dll</HintPath>
+      <HintPath>..\..\..\packages\Common.Logging.Core.2.2.0\lib\net35\Common.Logging.Core.dll</HintPath>
     </Reference>
     <Reference Include="Raspberry.System">
-      <HintPath>..\packages\Raspberry.System.1.3.0\lib\net40\Raspberry.System.dll</HintPath>
+      <HintPath>..\..\..\packages\Raspberry.System.1.3.0\lib\net40\Raspberry.System.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
