--- a/Programma_GOR_5F/Librerie/raspberry-sharp-io-master/Raspberry.IO/Raspberry.IO.csproj
+++ b/Programma_GOR_5F/Librerie/raspberry-sharp-io-master/Raspberry.IO/Raspberry.IO.csproj
@@ -33,6 +33,9 @@
     <DocumentationFile>bin\Release\Raspberry.IO.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Raspberry.System">
+      <HintPath>..\..\..\packages\Raspberry.System.1.3.0\lib\net40\Raspberry.System.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
