--- a/Programma_GOR_5F/Librerie/raspberry-sharp-io/Raspberry.IO.Components/Raspberry.IO.Components.csproj
+++ b/Programma_GOR_5F/Librerie/raspberry-sharp-io/Raspberry.IO.Components/Raspberry.IO.Components.csproj
@@ -33,30 +33,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging, Version=3.1.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+    <Reference Include="Common.Logging, Version=3.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Common.Logging.3.1.0\lib\net40\Common.Logging.dll</HintPath>
+      <HintPath>..\packages\Common.Logging.3.0.0\lib\net40\Common.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Common.Logging.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+    <Reference Include="Common.Logging.Core, Version=2.2.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Common.Logging.Core.3.1.0\lib\net40\Common.Logging.Core.dll</HintPath>
+      <HintPath>..\packages\Common.Logging.Core.3.0.0\lib\net40\Common.Logging.Core.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
     <Reference Include="Raspberry.System, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Raspberry.System.2.0.0\lib\net40\Raspberry.System.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\Raspberry.System.1.4.0\lib\net40\Raspberry.System.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="UnitsNet">
-      <HintPath>..\packages\UnitsNet.3.10.0\lib\net35\UnitsNet.dll</HintPath>
-    </Reference>
-    <Reference Include="UnitsNet">
-      <HintPath>..\packages\UnitsNet.3.10.0\lib\net35\UnitsNet.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\UnitsNet.3.4.0\lib\net35\UnitsNet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +121,7 @@
     <Compile Include="Sensors\Distance\HcSr04\HcSr04Connection.cs" />
     <Compile Include="Sensors\Distance\HcSr04\Units.cs" />
     <Compile Include="Sensors\Pressure\Bmp085\Bmp085Data.cs" />
+    <Compile Include="Sensors\Pressure\Bmp085\Bmp085I2cConnection.cs" />
     <Compile Include="Sensors\Pressure\Bmp085\Bmp085I2cConnectionExtensionMethods.cs" />
     <Compile Include="Sensors\Pressure\Bmp085\Bmp085Precision.cs" />
     <Compile Include="Sensors\Temperature\Dht\Dht11Connection.cs" />
@@ -149,7 +142,6 @@
     <Compile Include="Displays\Ssd1306\Fonts\Proportional3L.cs" />
     <Compile Include="Leds\GroveRgb\RgbColor.cs" />
     <Compile Include="Leds\GroveBar\GroveBarConnection.cs" />
-    <Compile Include="Sensors\Pressure\Bmp085\Bmp085I2CConnection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Raspberry.IO.InterIntegratedCircuit\Raspberry.IO.InterIntegratedCircuit.csproj">
@@ -175,7 +167,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
