Aggiunta .dll "Common", con i parametri comuni a tutta la soluzione. Aggiustate acquisizione e pagine Web con Logger su Common .dll. GorAcquire: - irrobustito - gestione del campionamento su richiesta (sampleIfRequested()) - refactoring WebApp: - pagina WebSample, che campiona periodicamente il sistema

--- a/Programma_GOR_5F/GorCommon/GorCommon.csproj
+++ b/Programma_GOR_5F/GorCommon/GorCommon.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calibration_2Points.cs" />
+    <Compile Include="Common.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
